# sqlite-rust

./: .gitignore  Cargo.toml  README.md  your_program.sh
.codecrafters/: run.sh
bench/: benchmark_queries.sql  check_parity.sh  run_benchmarks.sh
benches/: check_parity.sh  run_benchmarks.sh  run_flamegraphs.sh
src/: cli.rs  db.rs  db_range_helpers.rs  error.rs  index.rs  lib.rs  main.rs  page.rs  query.rs  record.rs  schema.rs  schema_table.rs  sqlite.rs  table.rs  timer.rs  varint.rs
src/db/: page_cache.rs  range_check.rs
src/query/: mod.rs  parse.rs  statement.rs
src/storage/: index.rs  mod.rs  page.rs  record.rs  schema.rs  table.rs  varint.rs
