[package]
name = "sqlite-rust"
version = "0.1.0"
authors = ["Aaron Ang <aaron.angyd@gmail.com>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive", "cargo"] }
libc = "0.2.183"
num_enum = "0.7.5"
sqlparser = "0.61.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"

[profile.release]
debug = true
strip = false

[profile.bench]
debug = true
